@@ -17,6 +17,7 @@
  *
  * Author: Mathieu Lacage <mathieu.lacage@sophia.inria.fr>
  */
+#include <algorithm>
 #include "simple-channel.h"
 #include "simple-net-device.h"
 #include "ns3/simulator.h"
@@ -63,6 +64,14 @@ SimpleChannel::Send (Ptr<Packet> p, uint16_t protocol,
         {
           continue;
         }
+      if (m_blackListedDevices.find (tmp) != m_blackListedDevices.end ())
+        {
+          if (find (m_blackListedDevices[tmp].begin (), m_blackListedDevices[tmp].end (), sender) !=
+              m_blackListedDevices[tmp].end () )
+            {
+              continue;
+            }
+        }
       Simulator::ScheduleWithContext (tmp->GetNode ()->GetId (), m_delay,
                                       &SimpleNetDevice::Receive, tmp, p->Copy (), protocol, to, from);
     }
@@ -81,11 +90,44 @@ SimpleChannel::GetNDevices (void) const
   NS_LOG_FUNCTION (this);
   return m_devices.size ();
 }
+
 Ptr<NetDevice>
 SimpleChannel::GetDevice (uint32_t i) const
 {
   NS_LOG_FUNCTION (this << i);
   return m_devices[i];
 }
+
+void
+SimpleChannel::BlackList (Ptr<SimpleNetDevice> from, Ptr<SimpleNetDevice> to)
+{
+  if (m_blackListedDevices.find (to) != m_blackListedDevices.end ())
+    {
+      if (find (m_blackListedDevices[to].begin (), m_blackListedDevices[to].end (), from) ==
+          m_blackListedDevices[to].end () )
+        {
+          m_blackListedDevices[to].push_back (from);
+        }
+    }
+  else
+    {
+      m_blackListedDevices[to].push_back (from);
+    }
+}
+
+void
+SimpleChannel::UnBlackList (Ptr<SimpleNetDevice> from, Ptr<SimpleNetDevice> to)
+{
+  if (m_blackListedDevices.find (to) != m_blackListedDevices.end ())
+    {
+      std::vector<Ptr<SimpleNetDevice> >::iterator iter;
+      iter = find (m_blackListedDevices[to].begin (), m_blackListedDevices[to].end (), from);
+      if (iter != m_blackListedDevices[to].end () )
+        {
+          m_blackListedDevices[to].erase (iter);
+        }
+    }
+}
+
 
 } // namespace ns3
